// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NumberComponent > rendering component > should match snapshot with isValid set to false 1`] = `
<div
  _nghost-a-c413410852=""
  id="root2"
  ng-version="21.0.0"
>
  <div
    _ngcontent-a-c413410852=""
    class="ogm invalid"
  >
    <span
      _ngcontent-a-c413410852=""
    >
      +
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      +
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      +
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      1
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      2
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      3
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      /
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      4
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      5
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      6
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      7
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      /
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      8
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      9
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      0
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      1
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      2
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      +
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      +
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      +
    </span>
    <!--container-->
  </div>
</div>
`;

exports[`NumberComponent > rendering component > should match snapshot with isValid set to true 1`] = `
<div
  _nghost-a-c413410852=""
  id="root3"
  ng-version="21.0.0"
>
  <div
    _ngcontent-a-c413410852=""
    class="ogm valid"
  >
    <span
      _ngcontent-a-c413410852=""
    >
      +
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      +
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      +
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      1
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      2
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      3
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      /
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      4
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      5
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      6
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      7
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      /
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      8
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      9
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      0
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      1
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      2
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      +
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      +
    </span>
    <span
      _ngcontent-a-c413410852=""
    >
      +
    </span>
    <!--container-->
  </div>
</div>
`;

exports[`NumberComponent > rendering component > should match snapshot with no @Input properties defined 1`] = `
<div
  _nghost-a-c413410852=""
  id="root1"
  ng-version="21.0.0"
>
  <div
    _ngcontent-a-c413410852=""
    class="ogm"
  >
    <!--container-->
  </div>
</div>
`;
